<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cet325.gamers_emotional_state_detection.activities.SettingsActivity">

    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="25dp" />


    <Switch
        android:id="@+id/switchRealTimeResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSettingsTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:switchPadding="20dp"
        android:text="@string/displaying_of_the_results_in_realtime" />

    <Switch
        android:id="@+id/switchVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchRealTimeResults"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:switchPadding="20dp"
        android:text="@string/vibration" />

    <Switch
        android:id="@+id/switchTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchVibration"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:switchPadding="20dp"
        android:text="@string/show_timestamp_of_the_frames_in_the_result_screen" />


</RelativeLayout>
