<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/about_g_e_m_a"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAboutTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/about1"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAbout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/about2"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtEmojiDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGame"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/about_emoji"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <TableLayout
            android:id="@+id/tblEmoji"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtEmojiDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_anger"
                    android:src="@drawable/ic_angry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_anger"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_contempt"
                    android:src="@drawable/ic_contempt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_contempt"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_disgust"
                    android:src="@drawable/ic_disgussed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_disgust"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_fear"
                    android:src="@drawable/ic_fear" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_fear"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_happy"
                    android:src="@drawable/ic_happy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_happy"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_neutral"
                    android:src="@drawable/ic_neutral" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_neutral"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_sad"
                    android:src="@drawable/ic_sad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_sad"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about_surprised"
                    android:src="@drawable/ic_surprised" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_surprised"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/txtAboutDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tblEmoji"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/about_me"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>