<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.cet325.gamers_emotional_state_detection.activities.ResultsActivity">

    <RelativeLayout
        android:id="@+id/vwSingleResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txtTitleSingleResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/results_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="25dp" />

        <RelativeLayout
            android:id="@+id/piechartLayout"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@+id/txtTitleSingleResult"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/txtTitlePieChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pie_chart_description"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/txtTitlePieChart"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lineChartLayout"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@+id/piechartLayout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txtTitleLineChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_chart_description"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/linechart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/txtTitleLineChart"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtFramesTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineChartLayout"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btmMargin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtFramesTimestamp"
            android:layout_marginBottom="100dp"
            android:text="@string/btm_spacing" />

    </RelativeLayout>
</ScrollView>
